# rag_against_the_machine

./: .gitignore  Dockerfile.rag_against_the_machine  Makefile  README.md  benchmark.txt  compare.sh  docker-compose.yml  pyproject.toml  questions.json
moulinette/: __main__.py  evaluate_retrieval.py  models.py  validate_student_data.py
src/: __main__.py  chunker.py  generator.py  main.py  models.py  retriever.py  test_bm25s.py
