[project]
name = "rag-against-the-machine"
version = "0.1.0"
description = "Fast RAG with Qwen3-0.6B"
requires-python = "==3.10.*"
dependencies = [
    "bm25s>=0.3.0",
    "chonkie>=1.5.6",
    "chromadb>=1.5.1",
    "dspy>=3.1.3",
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "mypy>=1.19.1",
    "onnxruntime<1.24",
    "pydantic>=2.12.5",
    "pystemmer>=3.0.0",
    "python-fire>=0.1.0",
    "sentence-transformers>=5.2.3",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
